<resources>
    <string name="app_name">Database App</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_phone">Phone</string>
    <string name="button_save">Save</string>
    <string name="text_head">Profile</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
</resources>
