<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:digits="0123456789+"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:lines="1"
        android:maxLength="13"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/image_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_account_circle_24dp"/>

        <ImageButton
            android:id="@+id/btn_gallery"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="@string/gallery"
            android:src="@drawable/ic_photo_library_24dp" />

        <ImageButton
            android:id="@+id/btn_camera"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="@string/camera"
            android:src="@drawable/ic_camera_24dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="36dp"
        android:text="@string/button_save"
        android:layout_gravity="center_horizontal"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>